recursion.logo.koch.Koch.scala.error
Erreur de compilation :
Koch:15: error: value ceiling is not a member of object Math
    snowSide(levels-1, Math.ceiling(length/3).asInstanceOf[Int]);
                            ^Koch:17: error: value ceiling is not a member of object Math
    snowSide(levels-1, Math.ceiling(length/3).asInstanceOf[Int]);
                            ^Koch:19: error: value ceiling is not a member of object Math
    snowSide(levels-1, Math.ceiling(length/3).asInstanceOf[Int]);
                            ^Koch:21: error: value ceiling is not a member of object Math
    snowSide(levels-1, Math.ceiling(length/3).asInstanceOf[Int]);
                            ^